lustre/mgc/mgc_request.c
@@ -129,9 +129,16 @@ static int config_log_get(struct config_llog_data *cld)
         RETURN(0);
 }
 
-/* Drop a reference to a config log.  When no longer referenced,
-   we can free the config log data */
-static void config_log_put(struct config_llog_data *cld)
+/**
+ * Drop a reference to a config log.  When no longer referenced, we can free
+ * the config log data.
+ *
+ * \param[in] cld config log data
+ *
+ * \retval true if \a cld is freed
+ * \retval false otherwise
+ */
+static bool config_log_put(struct config_llog_data *cld)
 {
         ENTRY;
 
@@ -155,9 +162,9 @@ static void config_log_put(struct config_llog_data *cld)
 
                 class_export_put(cld->cld_mgcexp);
                 OBD_FREE(cld, sizeof(*cld) + strlen(cld->cld_logname) + 1);
-        }
-
-        EXIT;
+		RETURN(true);
+	}
+	RETURN(false);
 }
 
 /* Find a config log by name */
@@ -357,11 +364,11 @@ DEFINE_MUTEX(llog_process_lock);
  */
 static int config_log_end(char *logname, struct config_llog_instance *cfg)
 {
-        struct config_llog_data *cld;
-        struct config_llog_data *cld_sptlrpc = NULL;
-        struct config_llog_data *cld_recover = NULL;
-        int rc = 0;
-        ENTRY;
+	struct config_llog_data *cld;
+	struct config_llog_data *cld_sptlrpc = NULL;
+	struct config_llog_data *cld_recover = NULL;
+	bool cld_freed = false;
+	ENTRY;
 
         cld = config_log_find(logname, cfg);
         if (cld == NULL)
@@ -377,10 +384,10 @@ static int config_log_end(char *logname, struct config_llog_instance *cfg)
          */
         if (unlikely(cld->cld_stopping)) {
 		mutex_unlock(&cld->cld_lock);
-                /* drop the ref from the find */
-                config_log_put(cld);
-                RETURN(rc);
-        }
+		/* drop the ref from the find */
+		config_log_put(cld);
+		RETURN(0);
+	}
 
         cld->cld_stopping = 1;
 
@@ -407,10 +414,15 @@ static int config_log_end(char *logname, struct config_llog_instance *cfg)
         config_log_put(cld);
         /* drop the start ref */
         config_log_put(cld);
+	/* drop the requeue ref if we haven't gotten the mgc lock */
+	mutex_lock(&cld->cld_lock);
+	if (cld->cld_lostlock)
+		cld_freed = config_log_put(cld);
+	if (!cld_freed)
+		mutex_unlock(&cld->cld_lock);
 
-        CDEBUG(D_MGC, "end config log %s (%d)\n", logname ? logname : "client",
-               rc);
-        RETURN(rc);
+	CDEBUG(D_MGC, "end config log %s\n", logname ? logname : "client");
+	RETURN(0);
 }
 
 int lprocfs_mgc_rd_ir_state(char *page, char **start, off_t off,
@@ -536,9 +548,11 @@ static int mgc_requeue_thread(void *data)
                                 config_log_put(cld_prev);
                         cld_prev = cld;
 
-                        cld->cld_lostlock = 0;
-                        if (likely(!stopped))
-                                do_requeue(cld);
+			mutex_lock(&cld->cld_lock);
+			cld->cld_lostlock = 0;
+			mutex_unlock(&cld->cld_lock);
+			if (likely(!stopped))
+				do_requeue(cld);
 
 			spin_lock(&config_list_lock);
 		}
@@ -594,8 +608,10 @@ static void mgc_requeue_add(struct config_llog_data *cld)
 	spin_lock(&config_list_lock);
 	if (rq_state & RQ_STOP) {
 		spin_unlock(&config_list_lock);
+		mutex_lock(&cld->cld_lock);
 		cld->cld_lostlock = 0;
-		config_log_put(cld);
+		if (!config_log_put(cld))
+			mutex_unlock(&cld->cld_lock);
 	} else {
 		rq_state |= RQ_NOW;
 		spin_unlock(&config_list_lock);
